# bibstat

./: .git-blame-ignore-revs  .gitignore  README.md  build.sh  manage.py  pyproject.toml  readme.md  requirements.txt
bibstat/: settings.py  settings_local.py.example  urls.py  wsgi.py
data/: articletypes.py  folk_termer.xlsx  forsk_termer.xlsx  municipalities.py  principals.py  sjukhus_termer.xlsx  skol_termer.xlsx
data/excel_exports/: readme.txt
data/public_exports/: readme.md
data/school_codes/: school_codes.xlsx
data/sigel_match/: Storfil_matchning_20151118.xlsx  sigel_mapping.xlsx
data/variables/: sjukhus_termer.xlsx  skol_termer.xlsx
django_js_reverse/: core.py  js_reverse_settings.py  rjsmin.py  views.py
django_js_reverse/templatetags/: js_reverse.py
django_js_reverse/tests/: settings.py  test_urlconf_urls.py  test_urls.py  unit_tests.py
doc/: setup-of-prod.txt
docs/: servers.md
e2e/: nightwatch.json  nightwatch.json.example  readme.md  wdio.conf.js.example
e2e/tests/: form.js  form_mocha.js
etc/: add-user.py
libstat/: apis.py  bibdb_integration.py  fieldgenerator.py  forms.py  models.py  mongoadmin.py  report_templates.py  reports.py  survey_templates.py  tests.py  urls.py  utils.py  views.py
libstat/apis/: open_data.py  terms.py
libstat/forms/: article.py  create_surveys.py  survey.py  variable.py
libstat/query_sets/: survey.py  variable.py
libstat/services/: bibdb_integration.py  clean_data.py  excel_export.py  report_generation.py
libstat/templates/: humans.txt
libstat/templatetags/: libstat_tags.py
static/js/: main.js  (+5 more)
(+145 files in other folders)
