[project]
name = "bibstat"
version = "1.21.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "black==24.3.0",
    "blinker==1.5",
    "certifi==2024.7.4",
    "django==4.2.22",
    "django-excel-response==1.0",
    "django-js-reverse",
    "django-mongoengine==0.6.0b2",
    "gunicorn==23.0.0",
    "mongoengine==0.28.2",
    "openpyxl==3.0.10",
    "pymongo==3.12",
    "python-ipware==2.0.1",
    "pytz==2022.1",
    "requests==2.32.4",
    "urllib3==2.2.2",
    "wheel>=0.45.1",
    "xlrd==1.2.0",
    "xlwt==1.3.0",
]

[tool.uv.sources]
django-js-reverse = { git = "https://github.com/ierror/django-js-reverse", rev = "7cab78c" }
